<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:text="@string/StringaEventi"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:text="@string/StringaEventoCarciofo"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="285dp"
            android:layout_height="228dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/sagracarciofo_9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:text="@string/StringaEventoCarciofoPeriodo"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/StringaEventoCarciofoDettagli"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:text="@string/StringaEventoVociDellaTerra"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="285dp"
            android:layout_height="228dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/voci_della_terra_9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:text="@string/StringaEventoVociDellaTerraPeriodo"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/StringaEventoVociDellaTerraDettagli"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:text="@string/StringaEventoTeatroECinemaInGrotta"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="285dp"
            android:layout_height="228dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/teatro_grotte_9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:text="@string/StringaEventoTeatroECinemaInGrottaPeriodo"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/StringaEventoTeatroECinemaInGrottaDettagli"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />


    </LinearLayout>


</ScrollView>