<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:text="@string/StringaComeRaggiungerci"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:text="@string/StringaDallAutostrada"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/StringaDettagliAutostrada"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:text="@string/StringaDallaBasentana"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/StringaDettagliBasentana"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:text="@string/StringaDallAeroPorto"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/StringaDettagliAereoPorto"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="3dp"
            android:text="@string/StringaDaStazioneSalerno"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/StringaDettagliStazione"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <ImageButton
            android:id="@+id/bottoneMappa"
            android:layout_width="255dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mappapertosa"
            />

    </LinearLayout>


</ScrollView>


