<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StringaNascitaProgetto"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:textSize="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StringaMessaggioInformazioniApplicazione"
            android:paddingBottom="10dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StringaInfromazioniSviluppatori"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:textSize="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StringaMessaggioInformazioniSviluppatori"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            />

    </LinearLayout>
</ScrollView>
