<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="20dp"
            android:text="@string/StringaPuntiRistoro"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/villadellerose" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaRistoranteVillaDelleRose"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaRistoranteVillaDelleRoseDettagli"
                    />

                <ImageView
                    android:id="@+id/bottoneVillaDelleRose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/sym_action_call"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="?android:attr/listDivider" />


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/zimarianna" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaRistoranteZiMarianna"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaRistoranteZiMariannaDettagli"
                    />

                <ImageView
                    android:id="@+id/bottoneZiMarianna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/sym_action_call"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/venosa" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaRistoranteVenosa"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaRistoranteVenosaDettagli" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaRistoranteVenosaUrl"
                    android:autoLink="web"
                    android:linksClickable="true"
                    />

                <ImageView
                    android:id="@+id/bottoneVenosa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/sym_action_call"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/barv" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaBarV"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaBarVDettagli"
                    />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/speleobar" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaSpeleoBar"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaSpeleoBarDettagli"
                    />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/barrionegro" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaBarRioNegro"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringaBarRioNegroDettagli"
                    />

                <ImageView
                    android:id="@+id/bottoneBarRioNegro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/sym_action_call"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

</ScrollView>